<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:fitsSystemWindows="false"
    tools:context=".ui.fragment.login.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_logo"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_80sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/app_logo" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/top_corner_img" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_greeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:fontFamily="@font/worksans_semibold"
            android:text="@string/hello"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_logo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:fontFamily="@font/worksans_medium"
            android:text="@string/phone_number"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_greeting" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:background="@drawable/rect_round_stroke_black"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/_8sdp"
            app:layout_constraintTop_toBottomOf="@id/tv_phone">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_country_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_drop_down"
                android:fontFamily="@font/worksans_medium"
                android:gravity="center"
                android:text="+91"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                app:drawableTint="@color/black" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:alpha="0.3"
                android:background="@color/black" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:fontFamily="@font/worksans_medium"
                android:gravity="center_vertical"
                android:inputType="number"
                android:maxLength="11"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:background="@drawable/rect_round_black"
            android:fontFamily="@font/worksans_medium"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintTop_toBottomOf="@id/ll_phone" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_or"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/tv_login">

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/_1sdp"
                android:layout_weight="1"
                android:alpha="0.3"
                android:background="@color/black" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/worksans_medium"
                android:paddingHorizontal="@dimen/_12sdp"
                android:text="@string/or"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/_1sdp"
                android:layout_weight="1"
                android:alpha="0.3"
                android:background="@color/black" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_social"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/ll_or">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginEnd="2.5dp"
                android:layout_weight="1"
                android:background="@drawable/rect_round_black"
                android:backgroundTint="#F14336"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    app:srcCompat="@drawable/icon_google" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:fontFamily="@font/nunito_regular"
                    android:text="@string/google"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="2.5dp"
                android:layout_weight="1"
                android:background="@drawable/rect_round_black"
                android:backgroundTint="#248CFE"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    app:srcCompat="@drawable/icon_facebook" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:fontFamily="@font/nunito_regular"
                    android:text="@string/facebook"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.hbb20.CountryCodePicker
            android:id="@+id/ccp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:ccp_autoDetectCountry="true"
            app:ccp_autoDetectLanguage="true"
            app:ccpDialog_backgroundColor="@color/white"
            app:ccp_contentColor="@color/black"
            app:ccp_textSize="10sp"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>